--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "yeoman-generator"
   ],
   "dependencies": {
+    "bluebird": "^3.0.5",
     "gulp-beautify": "^2.0.0",
     "lodash": "^3.10.1",
+    "normalize-git-url": "^3.0.1",
     "yeoman-generator": "^0.21.1"
   }
 }
