Add majority of base project

--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -16,8 +16,9 @@
     "test": "npm test"
   },
   "keywords": [
-    "fortnox",
-    "kugghuset"
+    "<%= dataSource %>",
+    "kugghuset",
+    "klarify-sprocket"
   ],
   "author": "<%= author %>",
   "license": "ISC",
