--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "yeoman-generator"
   ],
   "dependencies": {
+    "ast-query": "^1.0.1",
     "bluebird": "^3.0.5",
+    "chalk": "^1.1.1",
     "gulp-beautify": "^2.0.0",
     "lodash": "^3.10.1",
     "normalize-git-url": "^3.0.1",
+    "shelljs": "^0.5.3",
     "yeoman-generator": "^0.21.1"
   }
 }
